--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@audit/verify-sdk",
-  "version": "0.1.0",
+  "name": "kitkat-audit-sdk",
+  "version": "0.1.1",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,5 +10,7 @@
   "devDependencies": {
     "typescript": "^5.0.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
